src/snapshots/venial__tests__interpret_ty_expr_generic_as_path.snap
---
source: src/tests.rs
expression: path
---
Path {
    segments: [
        PathSegment {
            ident: Ident(
                path,
            ),
        },
        PathSegment {
            tk_separator_colons: "::",
            ident: Ident(
                to,
            ),
        },
        PathSegment {
            tk_separator_colons: "::",
            ident: Ident(
                Type,
            ),
            generic_args: GenericArgList {
                args: [
                    Lifetime {
                        tk_lifetime: Punct {
                            char: '\'',
                            spacing: Joint,
                        },
                        ident: Ident(
                            a,
                        ),
                    },
                    TyOrConst {
                        expr: [
                            other,
                            ":",
                            ":",
                            Arg,
                        ],
                    },
                    TyOrConst {
                        expr: [
                            36,
                        ],
                    },
                ],
            },
        },
        PathSegment {
            tk_separator_colons: "::",
            ident: Ident(
                Turbofish,
            ),
            generic_args: GenericArgList {
                tk_turbofish_colons: "::",
                args: [],
            },
        },
    ],
}
