src/snapshots/venial__tests__interpret_ty_expr_simple_as_path.snap
---
source: src/tests.rs
expression: path
---
Path {
    segments: [
        PathSegment {
            tk_separator_colons: "::",
            ident: Ident(
                path,
            ),
        },
        PathSegment {
            tk_separator_colons: "::",
            ident: Ident(
                to,
            ),
        },
        PathSegment {
            tk_separator_colons: "::",
            ident: Ident(
                Type,
            ),
        },
    ],
}
