src/snapshots/venial__tests__parse_all_kw_fn_definitions.snap
---
source: src/tests.rs
assertion_line: 592
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        qualifiers: FunctionQualifiers {
            is_default: true,
            is_const: true,
            is_async: true,
            is_unsafe: true,
            is_extern: true,
            extern_abi: Some(
                Literal {
                    lit: "C",
                },
            ),
        },
        name: Ident(
            all_kw,
        ),
        generic_params: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    b,
                ),
                ty: [
                    "f32",
                ],
            },
        ],
        where_clauses: None,
        return_ty: None,
    },
)
