src/snapshots/venial__tests__parse_async_fn.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        qualifiers: FunctionQualifiers {
            tk_default: None,
            tk_const: None,
            tk_async: Some(
                Ident(
                    async,
                ),
            ),
            tk_unsafe: None,
            tk_extern: None,
            extern_abi: None,
        },
        name: Ident(
            async_fn,
        ),
        generic_params: None,
        tk_params_parens: (),
        params: [
            Typed(
                FunctionTypedParameter {
                    attributes: [],
                    tk_mut: None,
                    name: Ident(
                        b,
                    ),
                    tk_colon: Punct {
                        char: ':',
                        spacing: Alone,
                    },
                    ty: [
                        f32,
                    ],
                },
            ),
        ],
        where_clause: None,
        tk_return_arrow: None,
        return_ty: None,
        body: Some(
            Group {
                delimiter: Brace,
                stream: TokenStream [],
            },
        ),
    },
)
