src/snapshots/venial__tests__parse_async_fn_definitions.snap
---
source: src/tests.rs
assertion_line: 574
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: Some(
            pub,
        ),
        qualifiers: FunctionQualifiers {
            is_default: false,
            is_const: false,
            is_async: true,
            is_unsafe: false,
            is_extern: false,
            extern_abi: None,
        },
        name: Ident(
            async_fn,
        ),
        generic_params: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    b,
                ),
                ty: [
                    "f32",
                ],
            },
        ],
        where_clauses: None,
        return_ty: None,
    },
)
