src/snapshots/venial__tests__parse_attr_fn.snap
---
source: src/tests.rs
assertion_line: 520
expression: func
---
Function(
    Function {
        attributes: [
            #[
                "my_attr",
            ],
        ],
        vis_marker: None,
        qualifiers: FunctionQualifiers {
            is_default: false,
            is_const: false,
            is_async: false,
            is_unsafe: false,
            is_extern: false,
            extern_abi: None,
        },
        name: Ident(
            my_attr_fn,
        ),
        generic_params: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    a,
                ),
                ty: [
                    "i32",
                ],
            },
        ],
        where_clauses: None,
        return_ty: None,
        body: Some(
            Group {
                delimiter: Brace,
                stream: TokenStream [],
            },
        ),
    },
)
