src/snapshots/venial__tests__parse_attr_fn_definitions.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [
            #[
                "my_attr",
            ],
        ],
        vis_marker: None,
        name: Ident(
            my_attr_fn,
        ),
        generic_params: None,
        where_clauses: None,
        params: [
            FunctionParameter {
                name: Ident(
                    a,
                ),
                ty: [
                    "i32",
                ],
            },
        ],
        returns: None,
    },
)
