src/snapshots/venial__tests__parse_basic_expression.snap
---
source: src/tests.rs
assertion_line: 592
expression: expressions
---
[
    [
        a,
        "+",
        b,
        "+",
        c,
    ],
]
