src/snapshots/venial__tests__parse_complex_attributes-2.snap
---
source: src/tests.rs
expression: "struct_type.attributes()[0].get_single_path_segment()"
---
None
